compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_type.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
----- Jumping from `src/app.rakun`

pub record Rec {
  Var1(Int)
  Var2(Int, Int)
}

pub fn make_var() -> Rec {
                     ↑    
  Var1(1)
}

----- Jumped to `src/app.rakun`

pub record Rec {
↑▔▔▔▔▔▔▔▔▔▔▔▔▔  
  Var1(Int)
  Var2(Int, Int)
}

pub fn make_var() -> Rec {
  Var1(1)
}
