compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_type_in_module.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
----- Jumping from `src/app.rakun`

import example_module
fn make_var() -> example_module.Rec {
                                ↑    
  example_module.Var1(1)
}

----- Jumped to `build/packages/hex/src/example_module.rakun`

pub record Rec {
↑▔▔▔▔▔▔▔▔▔▔▔▔▔  
  Var1(Int)
  Var2(Int, Int)
}
