compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_unqualified_imported_module_records.snap
---
source: compiler-core/src/language_server/tests/definition.rs
assertion_line: 205
expression: output
---
----- Jumping from `src/app.rakun`

import example_module.{Var1}
fn main() {
  Var1(1)
   ↑     
}

----- Jumped to `src/example_module.rakun`

pub record Rec {
  Var1(Int)
  ↑▔▔▔▔▔▔▔▔
  Var2(Int, Int)
}
